--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,144 @@
+@import url('https://fonts.googleapis.com/css2?family=Science+Gothic:wght@100..900&display=swap');
 @import "tailwindcss";
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@import "tailwindcss-animated";
+/* ---break---*/
+@custom-variant dark (&:is(.dark *));
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+    --color-background: var(--background);
+    --color-foreground: var(--foreground);
+    --color-ring: var(--ring);
+    --color-border: var(--border);
+    --animate-marquee: marquee var(--duration) infinite linear;
+    --animate-marquee-vertical: marquee-vertical var(--duration) linear infinite;
+  @keyframes marquee {
+  from {
+    transform: translateX(0);
+        }
+  to {
+    transform: translateX(calc(-100% - var(--gap)));
+        }
+    }
+  @keyframes marquee-vertical {
+  from {
+    transform: translateY(0);
+        }
+  to {
+    transform: translateY(calc(-100% - var(--gap)));
+        }
+    }
+  --animate-rippling: rippling var(--duration) ease-out
+;
+  @keyframes rippling {
+  0% {
+    opacity: 1;}
+  100% {
+    transform: scale(2);
+    opacity: 0;}}}
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+     color: var(--background);
+    font-optical-sizing: auto;
+}
+
+@layer base {
+
+    @keyframes fade-up {
+        0% {
+            opacity: 0;
+            transform: translateY(20px);
+            animation-delay: 0.1s;
+        }
+        100% {
+            opacity: 1;
+            transform: translateY(0);
+            animation-delay: 0.2s;
+
+        }
+    }
+
+    .fade-up {
+        animation: fade-up 0.5s ease-out forwards;
+    }
+
+    .page-top-bg {
+        background-image: url(https://swiperjs.com/images/page-top-bg.jpg);
+        background-size: auto 100%;
+        animation: page-top-bg-reveal 2s forwards;
+    }
+    .bg-no-repeat {
+        background-repeat: no-repeat;
+
+    }
+    @keyframes page-top-bg-reveal {
+        0% {
+            opacity: 0;
+            transform: translateY(-50%);
+        }
+        100% {
+            opacity: .75;
+            transform: translateY(0);
+        }
+    }
+    @keyframes circle-motion {
+        0% {
+            transform: rotate(0deg) translateX(50px) rotate(0deg);
+
+        }
+        100% {
+            transform: rotate(360deg) translateX(50px) rotate(-360deg);
+        }
+    }
+
+    .circle-motion {
+        animation: circle-motion 10s linear infinite;
+    }
+
+}
+
+/* ---break---*/
+
+.dark {
+    --background: oklch(0.145 0 0);
+    --foreground: oklch(0.985 0 0);
+    --card: oklch(0.205 0 0);
+    --card-foreground: oklch(0.985 0 0);
+    --popover: oklch(0.205 0 0);
+    --popover-foreground: oklch(0.985 0 0);
+    --primary: oklch(0.922 0 0);
+    --primary-foreground: oklch(0.205 0 0);
+    --secondary: oklch(0.269 0 0);
+    --secondary-foreground: oklch(0.985 0 0);
+    --muted: oklch(0.269 0 0);
+    --muted-foreground: oklch(0.708 0 0);
+    --accent: oklch(0.269 0 0);
+    --accent-foreground: oklch(0.985 0 0);
+    --destructive: oklch(0.704 0.191 22.216);
+    --border: oklch(1 0 0 / 10%);
+    --input: oklch(1 0 0 / 15%);
+    --ring: oklch(0.556 0 0);
+    --chart-1: oklch(0.488 0.243 264.376);
+    --chart-2: oklch(0.696 0.17 162.48);
+    --chart-3: oklch(0.769 0.188 70.08);
+    --chart-4: oklch(0.627 0.265 303.9);
+    --chart-5: oklch(0.645 0.246 16.439);
+    --sidebar: oklch(0.205 0 0);
+    --sidebar-foreground: oklch(0.985 0 0);
+    --sidebar-primary: oklch(0.488 0.243 264.376);
+    --sidebar-primary-foreground: oklch(0.985 0 0);
+    --sidebar-accent: oklch(0.269 0 0);
+    --sidebar-accent-foreground: oklch(0.985 0 0);
+    --sidebar-border: oklch(1 0 0 / 10%);
+    --sidebar-ring: oklch(0.556 0 0);
+}
+
+/* ---break---*/
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+    }
+  body {
+    @apply bg-background text-foreground;
+    }
 }
