--- a/app/globals.css
+++ b/app/globals.css
@@ -145,3 +145,7 @@ body {
     @apply bg-background text-foreground;
     }
 }
+.social-btn {
+    @apply text-gray-500 h-12 w-12 mx-2 bg-gray-100 shadow-xl rounded-full
+    flex items-center justify-center hover:bg-amber-400 hover:text-white;
+}
